@@ -75,6 +75,7 @@
 #include "PropBackups.h"
 #include "PluginsListDlg.h"
 #include "stringdiffs.h"
+#include "MergeCmdLineInfo.h"
 
 using std::vector;
 
@@ -277,7 +278,7 @@ CMainFrame::CMainFrame()
 , m_bFirstTime(TRUE)
 , m_bEscShutdown(FALSE)
 , m_bClearCaseTool(FALSE)
-, m_bExitIfNoDiff(FALSE)
+, m_bExitIfNoDiff(MergeCmdLineInfo::Disabled)
 , m_bShowErrors(TRUE)
 , m_CheckOutMulti(FALSE)
 , m_bVCProjSync(FALSE)
